--- a/Js canvas/canvas.html
+++ b/Js canvas/canvas.html
@@ -8,6 +8,7 @@
 
 <body>
     <canvas width="500" height="500" id="canvas"></canvas>
-    <script src="canvas.js"></script>
+    <script src="auxFuncs.js"></script>
+    <script src="canvas2.js"></script>
 </body>
 </html>
